# vim-anywhere

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/commands/: brainstorm.md  execute-plan.md  features.md  finish-feature.md  plan.md  re-setup.md  release.md  security-check.md  status.md  write-plan.md
.claude/docs/: arch-changelog-guide.md  changelog-guide.md
.claude/docs/architectural_change_log/: 2026-03-09-seamless-integration.md
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  config.rs  lib.rs  modes.rs  motions.rs  parser.rs  register.rs
crates/core/tests/: comprehensive.rs
crates/platform-mac/: Cargo.toml
crates/platform-mac/src/: accessibility.rs  app_detection.rs  event_tap.rs  keyboard.rs  lib.rs
src/: lib.rs  main.rs
tasks/: findings.md  lessons.md  progress.md  security-findings.md  todo.md  workflow-status.md
tests/: engine_comprehensive.rs
ui/: package-lock.json
ui/src/: dim-overlay.css  dim-overlay.html  dim-overlay.js  focus-border.css  focus-border.html  focus-border.js  index.html  main.js  notification.css  notification.html  notification.js  onboarding.css  onboarding.html  onboarding.js  overlay.css  overlay.html  overlay.js  styles.css  toggle-feedback.css  toggle-feedback.html  toggle-feedback.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs
